--- a/src/skills.html
+++ b/src/skills.html
@@ -3,70 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills</title>
+    <title>skills</title>
+    <link rel="stylesheet" href="background-styles.css">
+    <link rel="stylesheet" href="CSS/skills.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about me.html">About Me</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="skills-section">
-            <h1 id="skills-header">Skills</h1>
-            <figure id="skills-chart">
-                <img src="assets/Images/bar-chart.jpg" alt="Skills Chart">
-                <figcaption id="chart-caption"><em>This chart represents my skill levels in different programming languages.</em></figcaption>
-            </figure>
-            <article id="skills-table">
-                <h2>Technical Skills</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Skill</th>
-                            <th>Proficiency</th>
-                            <th>Tools/Frameworks</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>HTML</td>
-                            <td>Advanced</td>
-                            <td>VS Code, Browser DevTools</td>
-                        </tr>
-                        <tr>
-                            <td>CSS</td>
-                            <td>Intermediate</td>
-                            <td>Bootstrap</td>
-                        </tr>
-                        <tr>
-                            <td>JavaScript</td>
-                            <td>Beginner</td>
-                            <td>React, Node.js</td>
-                        </tr>
-                        <tr>
-                            <td>Python</td>
-                            <td>Intermediate</td>
-                            <td>Django</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </article>
-            <div id="projects">
-                <a href="https://github.com/jerusalem-M" class="projects-button">Projects</a>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy;2024 Eyerusalem Moge. Fueled by late nights and caffeine 😊</p>
-    </footer>
+    <div class="grid-container">
+        <div class="grid-item grid-item-1">
+            <header>
+                <div class="hamburger" id="hamburger" aria-label="Toggle navigation menu">
+                    <i class="fas fa-bars"></i>
+                  </div>
+                <nav aria-label="Main navigation">
+                    <ul class="nav" id="menu">
+                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about-me.html">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="hobbies.html">Hobbies</a></li>
+                        <li class="nav-item"><a class="nav-link" href="skills.html">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+        <div class="grid-item grid-item-2">
+            <h1>Skills</h1>
+        </div>
+        <div class="grid-item grid-item-3-left">
+            <img src="images/bar graph.jpg" alt="Skills Chart">
+            <figcaption id="chart-caption"><em>This chart represents my skill levels in different programming languages.</em></figcaption>
+        </div>
+        <div class="grid-item grid-item-3-right">
+         <div class="list-1">
+            <h2>1. HTML</h2>
+             <ul>
+                <li>Proficiency: Advanced</li>
+                <li>Tools/Frameworks: VS Code, Browser DevTools</li>
+                <li>Remark: Core strength with a solid understanding of web structure</li>
+              </ul>
+         </div>
+         <div class="list-2">
+          <h2>2. CSS</h2>
+             <ul>
+                <li>Proficiency: Intermediate</li>
+                <li>Tools/Frameworks: Bootstrap</li>
+                <li>Remark: Proficient in styling and responsive design</li>
+             </ul>
+         </div>
+         <div class="list-3">
+          <h2>3. JavaScript</h2>
+              <ul>
+                <li>Proficiency: Beginner</li>
+                <li>Tools/Frameworks: React, Node.js</li>
+                <li>Remark: Basic knowledge, working towards building dynamic functionality</li>
+               </ul>
+         </div>
+         <div class="list-4">
+          <a href="https://github.com/jerusalem-M" class="projects-button">Projects</a>
+         </div>
+        </div>
+        <div class="grid-item grid-item-4">
+            <footer>
+                <p id="simple">Simplifying complexity, Beautifully.</p>
+                <p class="copy">&copy;2024 Eyerusalem Moges. Fueled by late nights and caffeine.</p>
+            </footer>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
