--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                   </div>
                 <nav aria-label="Main navigation">
                     <ul class="nav" id="menu">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about-me.html">About Me</a></li>
                         <li class="nav-item"><a class="nav-link" href="hobbies.html">Hobbies</a></li>
                         <li class="nav-item"><a class="nav-link" href="skills.html">Skills</a></li>
