Remove emoji from header and footer text

--- a/src/home.html
+++ b/src/home.html
@@ -24,13 +24,13 @@
                 <p>Eyerusalem Moges</p>
             </div>
             <div>
-                <h1>Welcome to My tiny world!🌼</h1>
+                <h1>Welcome to My tiny world!</h1>
                 <p>I'm Eyerusalem Moges. <br> This is my personal space on the web. <br> Take your time exploring my story, interests, and passions. </p>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy;2024 Eyerusalem Moge. Fueled by late nights and caffeine 😊</p>
+        <p>&copy;2024 Eyerusalem Moge. Fueled by late nights and caffeine </p>
     </footer>
 </body>
 </html>
