Remove emoji from footer copyright text

--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>&copy;2024 Eyerusalem Moge. Fueled by late nights and caffeine 😊</p>
+        <p>&copy;2024 Eyerusalem Moge. Fueled by late nights and caffeine </p>
     </footer>
 </body>
 </html>
