--- a/src/skills.html
+++ b/src/skills.html
@@ -66,7 +66,7 @@
     </main>
 
     <footer>
-        <p>&copy;2024 Eyerusalem Moge. Fueled by late nights and caffeine 😊</p>
+        <p>&copy;2024 Eyerusalem Moge. Fueled by late nights and caffeine </p>
     </footer>
 </body>
 </html>
